fix(theme): fix width of input in form-item; fix yellow's contrast color

--- a/packages/theme/src/scss/components/form-item/basic.scss
+++ b/packages/theme/src/scss/components/form-item/basic.scss
@@ -40,6 +40,7 @@
   @include e(wrapper) {
     display: flex;
     flex: 1 0 100%;
+    width: 100%;
   }
 
   @include declareReuseVars((tips-margin-block-start));
